Update and rename Tensorflow_Practice.ipynb to Single_Layer_Perceptrons.ipynb

--- a/Single_Layer_Perceptrons.ipynb
+++ b/Single_Layer_Perceptrons.ipynb
@@ -381,7 +381,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'kaggle.json': b'{\"username\":\"kevinscaria\",\"key\":\"1c00a56ada93c5c09fbb602246ef2d61\"}'}"
+              "{'kaggle.json': b'{\"username\":\"ADD YOUR KAGGLE USERNAME\",\"key\":\"ADD YOUR API TOKEN\"}'}"
             ]
           },
           "metadata": {
